--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,33 +1,1 @@
-<div class="container p-4">
-  <h2>Create new post</h2>
-  <div class="row mt-4 mb-5">
-    <div class="col-12">
-      <%= simple_form_for @post, html: { class: "" } do |f| %>
-        <%= f.input :title, required: true %>
-        <%= f.input :content, required: true %>
-        <%= f.input :image, as: :file, required: true %>
-
-        <div class="accordion accordion-flush mt-2" id="accordionFlushExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                Additional fields for patterns
-              </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <%= f.input :type, as: :radio_buttons, collection: Post.types.keys.map { |type| [type.humanize, type] }, checked: 'post', input_html: { class: '' }, wrapper_html: { class: '' } %>
-                <%= f.input :yarn_weight %>
-                <%= f.input :gauge %>
-                <%= f.input :needle_size %>
-                <%= f.input :craft %>
-                <%= f.input :category %>
-              </div>
-            </div>
-          </div>
-        </div>
-        <%= f.submit class: "btn btn-primary mt-3" %>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render "posts/partials/new_edit_post_form", post: @post, method: :post, header: "Create a new post" %>
