made some fixes

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render "posts/partials/new_edit_post_form", post: @post, method: :patch, method: "Update post", header: "Update post" %>
+<%= render "posts/partials/new_edit_post_form", post: @post, method: :patch, header: "Update post" %>
