followers and followees are matched and make sense they were reversed for a bit

--- a/app/views/followings/index_followings.html.erb
+++ b/app/views/followings/index_followings.html.erb
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="following w-100">
-    <% @followings.each do |follow| %>
+    <% @followings.each do |following| %>
       <div class="follower-item d-flex justify-content-start align-items-center gap-3 p-3">
-<% if follow.avatar.attached? %>
-  <%= cl_image_tag follow.avatar.key, class: "avatar-large rounded-circle", alt: follow.username %>
+<% if following.avatar.attached? %>
+  <%= cl_image_tag following.avatar.key, class: "avatar-large rounded-circle", alt: following.username %>
 <% else %>
   <% basic_avatar = 'blank-profile.jpeg' %>
   <%= image_tag basic_avatar, class: "rounded-circle me-3", style: "width: 100px; height: 100px;" %>
 <% end %>
 
-        <%= link_to follow.username, user_path(follow), class: "no-style-link fw-bold" %>
+        <%= link_to following.username, user_path(following), class: "no-style-link fw-bold" %>
       </div>
     <% end %>
   </div>
