--- a/app/views/users/partials/_profile_header.html.erb
+++ b/app/views/users/partials/_profile_header.html.erb
@@ -9,7 +9,7 @@
     <% end %>
     <div style="display: flex; flex-direction: column;">
       <span class = "h3"><%= @user.username %></span>
-      <span class = "h5"> <%= @user.followees.count %> <%= link_to "Followers", followers_path(@user) %> <%= link_to "Following", followings_path(@user) %></span>
+      <span class = "h5"> <%= @user.followers.count %>  <%= link_to "Followers", followers_path(@user) %> <%= @user.followees.count %> <%= link_to "Following", followings_path(@user) %></span>
       <% if @user.bio.present? %>
         <p>"<%= @user.bio %>"</p>
         <% end %>
