Patterns are clickable and edit/delete function only exists under current user posts

--- a/app/views/posts/patterns.html.erb
+++ b/app/views/posts/patterns.html.erb
@@ -1,4 +1,6 @@
 <h1>All Patterns</h1>
 <% @patterns.each do |post| %>
-  <%= render 'patterns/partials/pattern_card', post: post, user: @user %>
+  <%= link_to post_path(post) do %>
+    <%= render 'patterns/partials/pattern_card', post: post, user: @user %>
   <% end %>
+<% end %>
