make the accordion open on load if it is a pattern

--- a/app/views/posts/partials/_new_edit_post_form.html.erb
+++ b/app/views/posts/partials/_new_edit_post_form.html.erb
@@ -9,9 +9,12 @@
         <%= f.input :type,
           as: :radio_buttons,
           collection: [['Post', 'post'], ['Pattern', 'pattern']],
-          input_html: { class: 'form-check-input', data: { action: "click->toggle-pattern-fields#toggle" } },
+          input_html: { class: 'form-check-input',
+                        data: { action: "click->toggle-pattern-fields#toggle",
+                                toggle_pattern_fields_target: "radio" } },
           wrapper_html: { class: '' }
         %>
+
         <div class="accordion accordion-flush mt-2 visually-hidden" id="accordionFlushExample" data-toggle-pattern-fields-target="patternFields">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
