--- a/app/views/posts/partials/_post_card.html.erb
+++ b/app/views/posts/partials/_post_card.html.erb
@@ -1,6 +1,6 @@
 <div class="card mx-auto rounded-top" style="width: 24rem; border: none;">
   <%= render 'posts/partials/post_image', post: post %>
-  <div class="card-body text-center">
+  <div class="card-body text-center shadow mb-3 bg-body rounded-3">
     <%= render 'posts/partials/post_header', post: post %>
     <%= render 'posts/partials/post_content', post: post %>
     <%= render 'posts/partials/post_footer', post: post, current_user: current_user %>
