--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,13 +18,14 @@
     <% end %>
     <% else %>
     <%= link_to new_user_session_path,  class: "nav-link navbar-button" || "#", class: "nav-link" do %>
-      <i class="fa-solid fa-bookmark"></i>
+      <i class="fas fa-search"></i>
+
     <% end %>
     <%= link_to new_user_session_path,  class: "nav-link navbar-button" || "#", class: "nav-link", id: "navbar-search" do %>
       <i class="fa-solid fa-plus"></i>
     <% end %>
     <%= link_to new_user_session_path,  class: "nav-link navbar-button" || "#", class: "nav-link" do %>
-      <i class="fa-solid fa-bell"></i>
+      <i class="fa-solid fa-bookmark"></i>
     <% end %>
     <%= link_to new_user_session_path,  class: "nav-link navbar-button" || "#", class: "nav-link" do %>
       <i class="fa-solid fa-user"></i>
