buttons for the follow and the followers page

--- a/app/views/followings/index_followers.html.erb
+++ b/app/views/followings/index_followers.html.erb
@@ -2,14 +2,13 @@
   <div class="following w-100">
     <% @followers.each do |follow| %>
       <div class="follower-item d-flex justify-content-start align-items-center gap-3 p-3">
-<% if follow.avatar.attached? %>
-  <%= cl_image_tag follow.avatar.key, class: "avatar-large rounded-circle", alt: follow.username %>
-<% else %>
-  <% basic_avatar = 'blank-profile.jpeg' %>
-  <%= image_tag basic_avatar, class: "rounded-circle me-3", style: "width: 100px; height: 100px;" %>
-<% end %>
+        <% if follow.avatar.attached? %>
+          <%= cl_image_tag follow.avatar.key, class: "avatar-large rounded-circle", alt: follow.username, style: "width: 60px; height: 60px;" %>
+        <% else %>
+          <%= image_tag 'blank-profile.jpeg', class: "rounded-circle", style: "width: 60px; height: 60px;" %>
+        <% end %>
 
-        <%= link_to follow.username, user_path(follow), class: "no-style-link fw-bold" %>
+        <%= link_to follow.username, user_path(follow), class: "no-style-link text-decoration-none text-dark" %>
       </div>
     <% end %>
   </div>
