--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -1,29 +1,30 @@
 <% if user_signed_in? %>
   <%= render "users/partials/profile_header" %>
 
-  <% if @user != current_user %>
-    <div class="d-flex align-items-center justify-content-between">
+<% if @user != current_user %>
+  <div class="d-flex justify-content-center align-items-center">
+    <div class="d-flex flex-row align-items-center">
       <%= simple_form_for @user, url: follow_unfollow_path(@user), html: { method: :post } do |f| %>
-        <%= f.button :submit, @is_following ? "Unfollow" : "Follow", class: @is_following ? "btn btn-secondary" : "btn btn-primary" %>
+        <%= f.button :submit, @is_following ? "Unfollow" : "Follow", class: @is_following ? "btn btn-secondary btn-sm me-2" : "btn btn-primary btn-sm me-2", style: "padding: 0.25rem 0.5rem;" %>
       <% end %>
-
       <%= simple_form_for @chat, url: chat_create_path, html: { method: :post } do |f| %>
         <%= f.input :user_id, as: :hidden, input_html: { value: @user.id }, wrapper: false %>
-        <%= f.button :submit, "Message", class: "btn btn-primary" %>
+        <%= f.button :submit, "Message", class: "btn btn-primary btn-sm", style: "padding: 0.25rem 0.5rem;" %>
       <% end %>
     </div>
-  <% end %>
+  </div>
 <% end %>
 
-<hr>
+  <% if @user.bio.present? %>
+        <p class="fs-6"><%= @user.bio %></p>
+        <% end %>
+  <hr>
 
-
-<% @user.posts.each do |post| %>
-  <%= link_to post_path(post) do %>
-    <%= render 'users/partials/my_profile_card', post: post, user: @user %>
+  <% @user.posts.each do |post| %>
+    <%= link_to post_path(post) do %>
+      <%= render 'users/partials/my_profile_card', post: post, user: @user %>
+    <% end %>
   <% end %>
 
-
+  <hr>
 <% end %>
-
-<hr>
