--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -17,7 +17,7 @@ $success:    $green;
 $info:       $yellow;
 $danger:     $red;
 $warning:    $orange;
-$secondary:   #C989EB;
+$secondary:   #6600a5;
 
 // Buttons & inputs' radius
 $border-radius-sm:            .0625rem;
