--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -10,7 +10,7 @@ $headings-font-family:   $headers-font;
 $body-bg:                $light-gray;
 $font-size-base:         1rem;
 
-// Colors
+// Colors refined
 $body-color: $gray;
 $primary:    #8B5FBF;
 $success:    $green;
