edited post index cards to be prettier

--- a/app/views/posts/partials/_navbar_top_index.html.erb
+++ b/app/views/posts/partials/_navbar_top_index.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top mb-3 shadow-sm" id="navbar-top">
+<nav class="navbar navbar-expand-lg sticky-top mb-3 shadow-sm container-fluid" id="navbar-top">
   <div class="container">
   <%= link_to root_path, class: "navbar-brand d-flex align-items-center" do %>
     <% if controller_name == "posts" && action_name == "index" %>
