--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-lewagon navbar-expand-lg fixed-bottom">
+<nav class="navbar navbar-lewagon navbar-expand-lg fixed-bottom container-fluid">
   <div class="container d-flex justify-content-around">
     <%= link_to root_path, class: "nav-link" do %>
       <i class="fas fa-house" style="color: #ffffff"></i>
