--- a/app/views/posts/partials/_post_footer.html.erb
+++ b/app/views/posts/partials/_post_footer.html.erb
@@ -14,9 +14,9 @@
     <% end %>
   </div>
   <% if post.pattern? %>
-    <div class="badge bg-primary">Pattern</div>
+    <div class="badge rounded-pill bg-primary ">Pattern</div>
   <% else %>
-    <div class="badge bg-secondary">Post</div>
+    <div class="badge rounded-pill bg-secondary">Post</div>
   <% end %>
   <div id="post-<%= post.id %>-likes" class="d-flex align-items-center p-2 bd-highlight">
     <% if post.post_likes.where(user: current_user).exists? %>
