--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <% if @post.pattern == false %>
   <%= render "posts/partials/show_post_card" %>
+  <%= @post.content %>
 <% else  %>
   <%= render 'patterns/partials/pattern_card', post: @post, user: @user %>
   <%= render 'patterns/partials/pattern_content', post: @post, user: @user %>
