--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -38,7 +38,7 @@
                                                         </li>
                                                         <li>
                                                           <%= link_to user_path(@chat_with), class: "dropdown-item" do %>
-                                                            Go to <strong><%= @chat_with.username %></strong> profile
+                                                            See <em><%= @chat_with.username %></em> profile
                                                           <% end %>
                                                         </li>
                                                     </ul>
