--- a/app/views/users/partials/_my_profile_card.html.erb
+++ b/app/views/users/partials/_my_profile_card.html.erb
@@ -1,5 +1,5 @@
 <div class="col-12 col-md-6 mb-4">
-  <div class="card mx-auto rounded-top border border-secondary shadow-sm" style="width: 100%;">
+  <div class="card shadow p-3 mb-3 bg-body rounded" style="width: 100%;">
     <div class="d-flex h-100">
       <%= render 'users/partials/my_profile_image', post: post %>
 
