added min height for the notifications cards

--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,3 +1,3 @@
-<div class="card mx-auto shadow p-3 mb-3 bg-body rounded" style="width: 100%;">
+<div class="card mx-auto shadow p-3 mb-3 bg-body rounded" style="width: 100%; min-height: 82px;">
     <%= link_to notification.content, post_path(notification.post), class: "text-decoration-none" %>
 </div>
