--- a/app/views/users/partials/_my_profile_footer.html.erb
+++ b/app/views/users/partials/_my_profile_footer.html.erb
@@ -1,35 +1,38 @@
 <div class="d-flex align-items-center">
+  <% if post.user_id == current_user.id %>
+      <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
+      <%= form_with(url: post_path(post), method: :delete, data: { turbo: "true", confirm: "Are you sure you want to delete this post?" }) do |form| %>
+        <%= form.submit "Delete", data: { turbo_action: "replace" }, class: "btn btn-primary" %>
+      <% end %>
+  <% end %>
+</div>
   <div data-controller="favorites" data-favorites-id-value="<%= post.id %>">
     <% if post.favorites.where(user: current_user).exists? %>
-      <i class="fa-solid fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
+      <i class="fa-solid fa-bookmark mx-2 fa-xs text-body" data-action="click->favorites#toggleFavorite"></i>
     <% else %>
-      <i class="fa-regular fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
+      <i class="fa-regular fa-bookmark mx-2 fa-xs text-body" data-action="click->favorites#toggleFavorite"></i>
     <% end %>
   </div>
 
   <div id="post-<%= post.id %>-likes" class="d-flex align-items-center ms-3">
     <% if post.post_likes.where(user: current_user).exists? %>
-      <%= link_to '', toggle_post_post_likes_path(post),
+      <%= link_to toggle_post_post_likes_path(post),
             data: { turbo_method: 'post' },
-            class: 'fas fa-heart mx-2 fa-xs text-body text-decoration-none',
-            style: 'margin-top: -0.16rem;' %>
+            style: 'margin-top: -0.16rem;' do %>
+        <i class="fas fa-heart mx-2 fa-xs text-body"></i>
+      <% end %>
     <% else %>
-      <%= link_to '', toggle_post_post_likes_path(post),
+      <%= link_to toggle_post_post_likes_path(post),
             data: { turbo_method: 'post' },
-            class: 'far fa-heart mx-2 fa-xs text-body text-decoration-none',
-            style: 'margin-top: -0.16rem;' %>
+            style: 'margin-top: -0.16rem;' do %>
+            <i class="far fa-heart mx-2 fa-xs text-body text-decoration-none"></i>
+       <% end %>
     <% end %>
     <p class="small text-muted mb-0"><%= post.post_likes.count %></p>
   </div>
 
   <div class="ms-3 p-2 bd-highlight">
-    <span>💬 comments</span>
+    <i class="far fa-comment mx-2 fa-xs text-body text-decoration-none"></i>
   </div>
 
-    <% if post.user_id == current_user.id %>
-      <%= link_to "Edit", edit_post_path(post) %>
-      <%= form_with(url: post_path(post), method: :delete, data: { turbo: "true", confirm: "Are you sure you want to delete this post?" }) do |form| %>
-        <%= form.submit "Delete", data: { turbo_action: "replace" } %>
-      <% end %>
-    <% end %>
 </div>
