--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
   <% content_for :meta_description, @post.content %>
   <% content_for :meta_image, cl_image_path(@post.image.key) %>
 <% else %>
-  <% content_for :meta_title, "#{@pattern.title} is on #{DEFAULT_META["meta_product_name"]}" %>
-  <% content_for :meta_description, @pattern.content %>
-  <% content_for :meta_image, cl_image_path(@pattern.image.key) %>
+  <% content_for :meta_title, "#{@post.title} is on #{DEFAULT_META["meta_product_name"]}" %>
+  <% content_for :meta_description, @post.content %>
+  <% content_for :meta_image, cl_image_path(@post.image.key) %>
 <% end %>
